Adding permalink feature

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p class="quote"></p>
         <p class='author'></p>
         <button class='btn btn-danger' style='margin-top: 30px;' id='copy-btn'>COPY</button>
+        <p class='permalink'></p>
         <p class='info-text'></p>
     </div>  
     <div class="alert alert-secondary text-center" role="alert" style='max-width: 500px; margin: auto;'>
