--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href='https://getbootstrap.com/docs/4.1/dist/css/bootstrap.min.css'>
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://image.flaticon.com/icons/png/512/9/9381.png">
 </head>
 <body class='bg-dark text-white'>    
     <div class="container text-center" style="max-width: 700px; margin-top: 200px;">
@@ -20,7 +21,7 @@
         <p class='info-text'></p>
     </div>  
     <div class="alert alert-secondary text-center" role="alert" style='max-width: 500px; margin: auto;'>
-        Tag: <span class='category'></span>
+        Tags: <span class='category'></span>
     </div>
     
     
