Adding styles, comments on code and date to document

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <p class='info-text'></p>
     </div>  
     <div class="alert alert-secondary text-center" role="alert" style='max-width: 500px; margin: auto;'>
-        Tags: <span class='category'></span>
+        Category: <span class='category'></span>
     </div>
-    
-    
+    <p class="date"></p>
+    <div style='height:200px;'></div>
     <footer class="footer">
-          <span class="text-footer">This project was created by <a href='http://michalgally.maweb.eu' target="_blank">MFoxx </a> in 100 days of code, day #1. Thanks <a href='https://www.theysaidso.com' target="_blank">theysaidso.com</a> for API.</span>
+          <span class="text-footer">This project was created by <a href='http://michalgally.maweb.eu' target="_blank">MFoxx </a> in 100 days of code, day #1. Thanks <a href='http://quotes.rest/' target="_blank">quotes.rest</a> for API.</span>
       </footer>
     <script src="main.js"></script>
 </body>
